# elastic-resnet

./: .gitignore  README.md  pyproject.toml
elastic_resnet/: Trainer.py  train_and_test.py  utils.py
elastic_resnet/functional/: cap_norm.py
elastic_resnet/models/: CapNorm2d.py  elastic_resnet.py  resnet.py
elastic_resnet/nn/: CapNorm2d.py  ElasticConv2d.py  __init__.py  functional.py
tests/: test_elastic_resnet.py
tests/functional/: test_cap_norm.py
tests/nn/: test_ElasticConv2d.py  test_cap_norm.py
