[tool.poetry]
name = "elastic-resnet"
version = "0.1.0"
description = ""
authors = ["David Chanin <chanindav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.9.0"
torchvision = "^0.10.0"
tqdm = "^4.62.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
